--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     	<meta charset="utf-8" />
-	<title>Portfolio of Wendy Koo</title>
-	<link rel="stylesheet" href="./CSS/styles.css" media="all">
+	<title>Wendy Koo Course Landing Page</title>
+	<link rel="stylesheet" href="./styles.css" media="all">
 </head>
 <body>
     <div id="wrapper">
     <header>
-        <h1>Web Design Basics Page</h1>
+        <h1>Wendy's Table of Contents</h1>
         
         <nav>
          <ul>
@@ -34,4 +34,3 @@
 
 
 
-</html>
