--- a/Week8/Digital_Art.html
+++ b/Week8/Digital_Art.html
@@ -2,19 +2,22 @@ f<!DOCTYPE html>
 <html>
 
 <head>
-    	<meta charset="utf-8" />
-	<title>Portfolio of Wendy Koo</title>
-	<link rel="stylesheet" href="./CSS/styles.css" media="all">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Portfolio of Wendy Koo</title>
+    <link rel="stylesheet" href="./CSS/styles.css" media="all">
 </head>
-
 
 <body>
     <div id="wrapper">
-    <header>
-        <h1>Portfolio of Wendy Koo</h1>
-        
-        <nav>
-        <ul class="main_menu li">
+        <header class="masthead">
+            <label for="show-menu" class="show-menu">&#9776;</label>
+            <input type="checkbox" id="show-menu">
+
+            <h1>Portfolio of Wendy Koo</h1>
+
+            <nav class="main-nav">
+                <ul class="main_menu li">
                     <li class="current-page"><a class="nav-links" href="index.html">HOME</a></li>
                     <li><a class="nav-links" href="about.html">ABOUT</a></li>
                     <li class="dropdown"><a class="nav-links">
@@ -30,13 +33,14 @@ f<!DOCTYPE html>
                     <li><a class="nav-links" href="Webcomic.html">WEBCOMIC</a></li>
                     <li><a class="nav-links" href="contact.html">CONTACT</a></li>
                 </ul>
+
         </nav>       
     </header>
 
 
         <h2>Digital Art</h2>
         <main class="illustration">
-            <figure>
+            <figure class="column3">
             <h3>Painted Illustrations </h3>
         <p>Personal work and commissioned illustrations.</p>
    
