--- a/Week9/index.html
+++ b/Week9/index.html
@@ -3,7 +3,7 @@
 <html lang="en"> 
 <head>
 <meta charset="utf-8">
-<title>Assignment 2 Template</title>
+<title>Assignment 9</title>
 <link rel="stylesheet" href="style-stage-5.css" media="all">
 <!--Use this to link an external style sheet-->
 </head>
@@ -28,6 +28,7 @@
 		<p>
 		<!-- Replace the default link URL with the one for your chosen site -->
 		The purpose of the website it to serve as a portfolio. Hopefully if everything goes as planned, it will consist of multiple categories of my personal projects and work. Because I create work with multiple methods, including digital illustration, traditional drawing, sculpture, comics, and animation, I want to utilize this site to be able to showcase the variety in an organizatonal yet aesthetic manner.  </p>
+        <img class="change1" alt src="/test2/Week9/change_1" width="867" height="908">
 		<!-- Replace the placeholder images with your own content -->
 		<figure>
 		
