--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <li><a href="Week5/index.html">WEEK 6</a></li>
                     <li><a href="Week7/index.html">WEEK 7</a></li>
                     <li><a href="Week8/index.html">WEEK 8</a></li>
+                    <li><a href="Week9/index.html">WEEK 9</a></li>
                 </ul>
             </nav>
         </header>
