--- a/Week9/index.html
+++ b/Week9/index.html
@@ -11,16 +11,15 @@
 	<h1 id="top"> Web Site Specification</h1>		
 		<nav>		
 			<ul>
-				<li><a class="nav-links" href="#purpose">Final Project Proposal</a></li>
-				<li><a class="nav-links" href="#audience">Change 1</a></li>
-                <li><a class="nav-links" href="#tone">Change 2</a></li>
-                <li><a class="nav-links" href="#primary">Change 3</a></li>
+				<li><a class="nav-links" href="#proposal">Final Project Proposal</a></li>
+                <li><a class="nav-links" href="#C2">Change 2</a></li>
+                <li><a class="nav-links" href="#C3">Change 3</a></li>
                
             </ul>
         </nav>
     </header>	
 	<section>
-	<h2 id="purpose"> Final Project Proposal</h2>
+	<h2 id="proposal"> Final Project Proposal</h2>
 		<p>
 
 		For my final site project, I have decided to enhance my current portfolio site. Because I could potentially use the site for future employers, I want it to not only look but also function as efficient as possible. Thus, the three changes I want to apply to the site include adding a slide for my home page, adding hover and pop-up effects to my gallery images, and reorganizing and imrpoving current site compositions.<br>
@@ -31,7 +30,7 @@
 		
 	</section> 
 	<section>
-	<h2 id="audience"> Change 2</h2>
+	<h2 id="C2"> Change 2</h2>
 	    <p>
 
 	    Another change I intend to add to my current site is to implement a hover effect to the images in my gallery, and to also have a bigger version to pop-up on the center of the screen when clicked on. It will give the viewer a better look into the image they choose and show more details. An example of what I mean can be shown in the mock up below. </p>
@@ -42,7 +41,7 @@
 	 
 	
     <section>
-        <h2 id="tone">Change 3</h2>
+        <h2 id="C3">Change 3</h2>
         <p>Lastly, I want to improve the overall compositions in some of my tabs, placed for convenient browsing and navigating. Small other changes include an update to some assets, including making the social media links from square icons to circular ones. </p>
      <img src="../Week9/imgs/change3.jpg"  alt="change3" width="500">
     </section>
