--- a/Week9/index.html
+++ b/Week9/index.html
@@ -22,7 +22,7 @@
 	<h2 id="proposal"> Final Project Proposal</h2>
 		<p>
 
-		For my final site project, I have decided to enhance my current portfolio site. Because I could potentially use the site for future employers, I want it to not only look but also function as efficient as possible. Thus, the three changes I want to apply to the site include adding a slide for my home page, adding hover and pop-up effects to my gallery images, and reorganizing and imrpoving current site compositions.<br>
+		For my final site project, I have decided to enhance my current portfolio site. Because I could potentially use the site for future employers, I want it to not only look appealing but also function as efficient as possible. Thus, the three changes I want to apply to the site include adding a slide for my home page, adding hover and pop-up effects to my gallery images, and reorganizing and improving current site compositions.<br>
         For the first enhancement, this change was influenced by <a href="http://loish.net/ambrosial/">Loish's portfolio site </a>, where she utilizes a scroll/slide effect to exhibit multiple pieces of her artwork on one page. I want to incorporate a similar effect (prototyped in the mock-up image below) as it would offer more content to explore on the opening site. Basically, the current image will have an indication that it is selected (whether it has a stroke/border or the other images have lowered opacity, or both) while the full view will be featured on the main home space. With more art to show adds more possibilities to pique an interest. Also, the interactivity may offer some additional appeal to the home site. 
         </p>
         <img src="../Week9/imgs/change_1.jpg" alt="change1" width="600">
