--- a/Week9/index.html
+++ b/Week9/index.html
@@ -35,7 +35,7 @@
 
 	    Another change I intend to add to my current site is to implement a hover effect to the images in my gallery, and to also have a bigger version to pop-up on the center of the screen when clicked on. It will give the viewer a better look into the image they choose and show more details. An example of what I mean can be shown in the mock up below. </p>
             
-            <img src="../week9/imgs/change2.jpg" alt="change2" width="600">
+            <img src="../Week9/imgs/change2.jpg" alt="change2" width="600">
         
         </section>
 	 
