--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <li><a href="Week7/index.html">WEEK 7</a></li>
                     <li><a href="Week8/index.html">WEEK 8</a></li>
                     <li><a href="Week9/index.html">WEEK 9</a></li>
+                    <li><a href="Week_10/index.html">WEEK 10</a></li>
                 </ul>
             </nav>
         </header>
