--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Wendy Koo Course Landing Page</title>
+    <link rel="stylesheet" href="./styles.css" media="all">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
 
