--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Wendy Koo Course Landing Page</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+   	<link rel="stylesheet" href="./styles.css" media="all">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
                     <li><a href="Week7/index.html">WEEK 7</a></li>
                     <li><a href="Week8/index.html">WEEK 8</a></li>
                     <li><a href="Week9/index.html">WEEK 9</a></li>
-                    <li><a href="Week_10/index.html">WEEK 10</a></li>
+                    <li><a href="Week10/index.html">WEEK 10</a></li>
                     <li><a href="Week_10/index.html">WEEK 11</a></li>
 
                 </ul>
@@ -36,7 +36,5 @@
         </footer>
 
     </div>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+   
 </body>
