--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <li><a href="Week9/index.html">WEEK 9</a></li>
                     <li><a href="Week10/index.html">WEEK 10</a></li>
                     <li><a href="Week_10/index.html">WEEK 11</a></li>
+                    <li><a href="Week12/Animation.html">WEEK 13</a></li>
 
                 </ul>
             </nav>
