--- a/Week12/Animation.html
+++ b/Week12/Animation.html
@@ -47,7 +47,7 @@
             <h3>Project 2</h3>
                 <button id="vidpause">pause</button>
          <video id="bgvid" autoplay loop poster="media/thumbnails/autumn.jpg">
-			<source src="media/flour_sack_wendy_koo2.webm">
+			<source src="media/ezgif-4-f271864c0c.mp4">
 		</video>
     <script src="js/background-video-control.js"></script>
             <h3>N/A</h3>
